--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,23 +5,13 @@ steps:
       - 'build'
       - '-t'
       - 'gcr.io/$PROJECT_ID/south-hampshire-college'
-      - '--build-arg'
-      - 'VITE_FIREBASE_API_KEY=$_VITE_FIREBASE_API_KEY'
-      - '--build-arg'
-      - 'VITE_FIREBASE_AUTH_DOMAIN=$_VITE_FIREBASE_AUTH_DOMAIN'
-      - '--build-arg'
-      - 'VITE_FIREBASE_PROJECT_ID=$_VITE_FIREBASE_PROJECT_ID'
-      - '--build-arg'
-      - 'VITE_FIREBASE_APP_ID=$_VITE_FIREBASE_APP_ID'
-      - '--build-arg'
-      - 'VITE_GEMINI_API_KEY=$_VITE_GEMINI_API_KEY'
       - '.'
 
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/south-hampshire-college']
 
-  # Deploy container image to Cloud Run
+  # Deploy container image to Cloud Run with runtime secrets
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
@@ -35,13 +25,12 @@ steps:
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+      - '--set-env-vars'
+      - 'GEMINI_API_KEY=$_GEMINI_API_KEY'
 
+# Substitution variables - pass these when running gcloud builds submit
 substitutions:
-  _VITE_FIREBASE_API_KEY: 'AIzaSyAIPJHIPEa6tmRVh-ylgw8pJ1RM7kzhzdI'
-  _VITE_FIREBASE_AUTH_DOMAIN: 'jobirdchatbot-61d33.firebaseapp.com'
-  _VITE_FIREBASE_PROJECT_ID: 'jobirdchatbot-61d33'
-  _VITE_FIREBASE_APP_ID: '1:971737729824:web:890ecb27047aa26b9d6545'
-  _VITE_GEMINI_API_KEY: 'AIzaSyCVkoYxAb_8Da2PmKXtCjz1LlYj-xoJjB4'
+  _GEMINI_API_KEY: ''
 
 images:
   - 'gcr.io/$PROJECT_ID/south-hampshire-college'
