--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server/index.js",
+    "dev:server": "node server/index.js"
   },
   "dependencies": {
-    "@google/genai": "^1.39.0",
+    "@google/generative-ai": "^0.21.0",
+    "express": "^4.21.0",
     "firebase": "^12.9.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
