--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,12 +12,12 @@ steps:
       - '--build-arg'
       - 'VITE_FIREBASE_APP_ID=$_VITE_FIREBASE_APP_ID'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/south-hampshire-college'
+      - 'europe-west2-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/south-hampshire-college'
       - '.'
 
-  # Push the container image to Container Registry
+  # Push the container image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/south-hampshire-college']
+    args: ['push', 'europe-west2-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/south-hampshire-college']
 
   # Deploy container image to Cloud Run with runtime secrets
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -27,7 +27,7 @@ steps:
       - 'deploy'
       - 'southhampshirecollege'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/south-hampshire-college'
+      - 'europe-west2-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/south-hampshire-college'
       - '--region'
       - 'europe-west2'
       - '--platform'
@@ -48,4 +48,4 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 images:
-  - 'gcr.io/$PROJECT_ID/south-hampshire-college'
+  - 'europe-west2-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/south-hampshire-college'
