--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.21.0",
     "express": "^4.21.0",
     "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
