--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "compression": "^1.8.1",
     "express": "^4.21.0",
     "firebase": "^12.9.0",
     "firebase-admin": "^13.6.1",
@@ -19,6 +20,7 @@
     "react-dom": "^19.2.4"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
